# ba

./: .gitignore  Cargo.toml
src/: context.rs  main.rs  mp.rs  parse.rs
src/formula/: arena.rs  langs.rs  language.rs  mod.rs  mp.rs  parse.rs
src/formula/langs/: imp_false.rs  imp_neg.rs  mod.rs
src/formula/old/: mod.rs  mp.rs  parse.rs
