[package]
name = "ba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
ahash = "0.8.11"
clap = { version = "4.5.17", features = ["derive"] }
hashbrown = { version = "0.14.5", features = ["rayon"] }
